Fix alignment

--- a/src/client/components/SectionCollapsible/SectionCollapsible.module.scss
+++ b/src/client/components/SectionCollapsible/SectionCollapsible.module.scss
@@ -15,8 +15,8 @@
   height: 0.8em;
   width: 0.8em;
   position: absolute;
-  top: 1.3rem;
-  transform: translateY(calc(-50% + 3px)) rotate(0);
+  top: 50%;
+  transform: translateY(-50%) rotate(0);
   left: 0;
   transition: transform 200ms ease-out;
 }
@@ -53,7 +53,7 @@
   color: inherit;
   
   &[aria-expanded='true'] .CaretIcon {
-    transform: translateY(calc(-50% + 3px)) rotate(90deg);
+    transform: translateY(-50%) rotate(90deg);
   }
 }
 
